--- a/C/Styles/OS.css
+++ b/C/Styles/OS.css
@@ -1,10 +1,24 @@
 /* 
     Este es el css para todo el "sistema operativo" a partir de la boot screen 
 
-    version 0.2
+    version 0.3
 
 */
 
+html{
+    margin: 0;
+    padding: 0;
+
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
+*{
+    image-rendering: pixelated;
+
+    font-family: F95;
+    font-smooth: none;
+}
 
 /* START MENU */
 
@@ -32,8 +46,11 @@
 
     background: url(./images/Win95bootsm.png);
     background-repeat: no-repeat;
-    background-size: 190vh 100vh;
-    background-position: center b;
+    background-size: 100% 100vh;
+    background-position: start center;
+
+    align-items: center;
+    justify-content: center;
 }
 
 body{
@@ -45,6 +62,9 @@ body{
     position: absolute;
     display: flex;
     margin-top: auto;
+
+    align-items: center;
+    justify-content: center;
 
     width: 100%;
     height: 40px;
@@ -75,31 +95,58 @@ body{
     
     background-color: #c3c3c3;
     border-style: solid;
-    border-width: 3px;
+    border-width: 2px;
     border-color: white black black white;
 }
 
+/* Barra de tareas */
+
 .Taskbar{
-    padding: 5px;
+    display: flex;
+    justify-content: space-between;
+    padding: 3px 0px 4px 0px;
 
     background-color: #c3c3c3;
 
     border-color: white none none none;
     border-style: solid;
-    border-width: 3px 0px 0px 0px;
+    border-width: 2px 0px 0px 0px;
 
     width: 100%;
     position: absolute;
     bottom: 0px;
 }
 
+.Taskbar div{
+    display: flex;
+}
+
+.Taskbar hr{
+    padding: 0px;
+    margin: 0px 3px 0px 3px;
+
+    width: 0px;
+
+    height: 24.5px;
+
+    border-style: solid;
+    border-width: 2px;
+    border-color: #808080 white white #808080;
+}
+
 .StartButton{
-    padding: 0px 5px 0px 5px;
+    display: flex;
+
+    justify-content: center;
+    align-items: center;
+
+    padding: 0px 4px 0px 4px;
     margin: 0px;
+    gap: 2px;
 
     background-color: #c3c3c3;
     border-style: solid;
-    border-width: 3px;
+    border-width: 2px;
     border-color: white black black white;
 }
 
@@ -108,7 +155,52 @@ body{
     border-color: black white white black;
 }
 
+.StartButton img{
+    width: 20px;
+    height: 20px;
+}
+
 .StartButton p {
+    text-align: center;
+    vertical-align: middle;
+
+    font-weight: 700;
+    font-size: 12px;
+
     line-height: 0px;
 }
-/* Barra de tareas */
+
+.Widgets{
+    display: flex;
+    right: 0;
+
+    justify-content: center;
+    align-items: center;
+    vertical-align: middle;
+
+    background-color: #c3c3c3;
+    border-style: solid;
+    border-width: 2px;
+    border-color: #808080 white white #808080;
+
+    padding: 0px 5px 0px 0px;
+}
+
+.Widgets button{
+    background-color: transparent;
+    border-style: none;
+}
+
+.Widgets button img{
+    padding: 0px;
+    margin: 0px;
+
+    width: 20px;
+    height: 20px;
+}
+
+.Widgets p {
+    font-size: 12px;
+    line-height: 0px;
+    color: black;
+}
