--- a/C/Styles/OS.css
+++ b/C/Styles/OS.css
@@ -9,8 +9,7 @@ html{
     margin: 0;
     padding: 0;
 
-    max-width: 100%;
-    overflow-x: hidden;
+
 }
 
 *{
@@ -40,6 +39,22 @@ html{
     font-family: F95;
     src: url(MS\ Sans\ Serif\ 8pt.ttf);
 }
+
+@font-face {
+    font-family: TimesNew95;
+    src: url(./pixelated-times-new-roman.otf);
+}
+
+h1{
+    font-family: TimesNew95;
+    font-weight: 100;
+    font-size: 60px;
+
+    line-height: 0px;
+    padding: 0px;
+    margin: 0px;
+}
+
 .Startmenu{
     margin: 0;
     padding: 0;
@@ -102,9 +117,14 @@ body{
 /* Barra de tareas */
 
 .Taskbar{
+    width: 100%;
+    position: fixed;
+    bottom: 0px;
+    box-sizing: border-box;
+
     display: flex;
     justify-content: space-between;
-    padding: 3px 0px 4px 0px;
+    padding: 3px 3px 4px 3px;
 
     background-color: #c3c3c3;
 
@@ -112,9 +132,6 @@ body{
     border-style: solid;
     border-width: 2px 0px 0px 0px;
 
-    width: 100%;
-    position: absolute;
-    bottom: 0px;
 }
 
 .Taskbar div{
@@ -203,4 +220,114 @@ body{
     font-size: 12px;
     line-height: 0px;
     color: black;
+}
+
+/* Windows */
+
+.Window{
+    left: 50%; 
+    top: 25%;
+
+    transform: translate(-50%);
+
+    position:fixed;
+    z-index: 1;
+
+    font-size: 14px;
+    padding: 2px;
+
+    color: black;
+    background-color: #c0c0c0;
+
+    border-style: solid;
+    border-width: 2px;
+    border-color: white black black white;
+}
+
+.WTop-Bar{
+    display: flex;
+    flex-direction: row;
+
+
+    justify-content: space-between;
+    height: 24px;
+
+    align-items: center;
+    padding: 0px 2px 0px 2px;
+    margin-bottom: 2px;
+
+    background-color: #000080;
+    color: white;
+
+    line-height: 0;
+}
+
+.WTop-Bar div{
+    display: flex;
+    flex-direction: row;
+    align-self: center;
+    flex-wrap: nowrap;
+}
+
+.WTop-Bar div p{
+    position: absolute;
+    left: 6px;
+    top: 2px;
+    text-align: left;
+}
+
+.WTop-Bar div button{
+    height: 20px;
+    width: 20px;
+
+    background-color: #c0c0c0;
+
+    border-style: solid;
+    border-width: 2px;
+    border-color: white black black white;
+    
+    line-height: 0px;
+}
+
+.WTop-Bar div button:active{
+    background-color: #a0a0a4;
+
+    border-style: solid;
+    border-width: 2px;
+    border-color: black white white black;
+    
+    line-height: 0px;
+}
+
+.WTop-Bar div button img{
+    position: absolute;
+    padding: 0px;
+    margin: 0px;
+
+    line-height: 0px;
+
+    transform: translate(-50%, -50%);
+    width: 11px;
+}
+
+.WContent{
+    margin: 0px;
+    padding: 0;
+
+    margin-top: 15px;
+
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: calc(100% - 27px);
+}
+
+.WNotes{
+    padding: 10px;
+
+    border-style: solid;
+    border-width: 2px;
+    border-color: #808080 white  white #808080;
+
+    background-color: #feffdf;
 }
