--- a/C/Styles/OS.css
+++ b/C/Styles/OS.css
@@ -230,7 +230,7 @@ body{
 
     transform: translate(-50%);
 
-    position:fixed;
+    position:absolute;
     z-index: 1;
 
     font-size: 14px;
@@ -245,6 +245,7 @@ body{
 }
 
 .WTop-Bar{
+    user-select: none;
     display: flex;
     flex-direction: row;
 
