--- a/C/Styles/OS.css
+++ b/C/Styles/OS.css
@@ -125,6 +125,41 @@ body{
     border-color: black white white black;
 }
 
+.input{
+    display: block;
+    position: relative;
+    cursor: pointer;
+    user-select: none;
+
+    margin: 4px;
+
+    width: 16px;
+    height: 16px;
+    margin-bottom: 10px;
+
+    background-color: white;
+
+    border-style: solid;
+    border-width: 2px;
+    border-color: white black black white;
+}
+.input input{
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;
+}
+
+.Checkmark{
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 25px;
+    width: 25px;
+    background-color: #000080;
+}
+
 /* Barra de tareas */
 
 .Taskbar{
