--- a/C/Styles/OS.css
+++ b/C/Styles/OS.css
@@ -240,6 +240,41 @@ body{
     line-height: 0px;
 }
 
+.taskbar-button{
+    display: flex;
+
+    justify-content: center;
+    align-items: center;
+
+    padding: 0px 4px 0px 4px;
+    margin: 0px;
+    gap: 2px;
+
+    background-color: #c3c3c3;
+    border-style: solid;
+    border-width: 2px;
+    border-color: white black black white;
+}
+
+.taskbar-button:active{
+    background-color: #a0a0a4;
+    border-color: black white white black;
+}
+
+.taskbar-button p {
+    text-align: center;
+    vertical-align: middle;
+
+    font-size: 12px;
+
+    line-height: 0px;
+}
+
+.taskbar-button img{
+    width: 20px;
+    height: 20px;
+}
+
 .Widgets{
     display: flex;
     right: 0;
@@ -320,10 +355,21 @@ body{
 }
 
 .WTop-Bar div p{
-    position: absolute;
     left: 6px;
     top: 2px;
     text-align: left;
+}
+
+.WTop-Bar div img{
+    transform: translateX(-1px)translateY(3px);
+
+    width: 20px;
+    height: 20px;
+}
+
+.WTop-Bar div button img{
+    left: auto;
+    top: auto;
 }
 
 .WTop-Bar div button{
