--- a/C/Styles/OS.css
+++ b/C/Styles/OS.css
@@ -154,16 +154,17 @@ body{
 .Checkmark{
     position: absolute;
     font-size: 16px;
-    top: -4px;
-    left: 1px;
-    height: 16px;
-    width: 16px;
-    color: white;
+    top: 0px;
+    left: 0px;
+    height: 14px;
+    width: 14px;
+    filter: brightness(100);
 }
 
 .input input:checked ~ .Checkmark{
     color: black;
-    content: '&#10004';
+    display: block;
+    filter: brightness(0);
 }
 
 /* Barra de tareas */
@@ -310,6 +311,13 @@ body{
     color: black;
 }
 
+#Apps{
+    width: 100%;
+    display: flex;
+
+    flex-direction: row;
+}
+
 /* Windows */
 
 .Window{
@@ -352,6 +360,7 @@ body{
     flex-direction: row;
     align-self: center;
     flex-wrap: nowrap;
+    padding-left: 2px;
 }
 
 .WTop-Bar div p{
