Fixed Some Icons!

--- a/C/Styles/OS.css
+++ b/C/Styles/OS.css
@@ -627,6 +627,11 @@ body{
     filter: invert();
 }
 
+#secmenu button img{
+    max-height: 20px;
+
+}
+
 .arrow{
     width: 20px;
     position: absolute;
