--- a/C/Styles/OS.css
+++ b/C/Styles/OS.css
@@ -638,3 +638,25 @@ body{
     right: 0;
 }
 
+.notepad{
+    overflow-y: scroll;
+    overflow-x: scroll;
+}
+
+.notepad button{
+    border: none;
+    background-color: transparent;
+}
+
+.notepad button:hover{
+    color: white;
+    background-color: #000080;
+}
+
+.notepad div{
+
+    background-color: white;
+    border-color: black white white black;
+    border-width: 2px;
+
+}
