--- a/Styles/Bios.css
+++ b/Styles/Bios.css
@@ -1,18 +1,30 @@
+/* FUENTE DE TEXTO DE LA BIOS */
 @font-face {
     font-family: GNU Unifont;
     src: url(unifont-17.0.03.otf);
+}
+
+:root{
+/* COLOR PRIMARIO (FONDO) */
+--color_prim: rgb(0,0,0);
+
+/* COLOR SECUNDARIO */
+--color_sec: rgb(191, 191, 191);
+
 }
 
 body{
     font-family: GNU Unifont;
     font-size: 20px;
 
-    color: white;
-    background-color: black;
+    color: var(--color_sec);
+    background-color: var(--color_prim);
+
+    text-align: center;
 }
 
 .title{
-    color: rgb(191, 191, 191);
+    color: var(--color_sec);
     display: flex;
 
     justify-content: center;
@@ -20,11 +32,9 @@ body{
     gap: 10px;
 }
 
-.entry{
-    margin-left: 80px;
-    margin-right: 80px;
-
-    border: 2px white solid;
+/* EL ENTRY SE REFIERE A EL SECTION DONDE SE ENCUENTRAN LOS BOTONES DE SELECCIÓN */
+select{
+    border: 2px var(--color_sec) solid;
 
     padding: 4px;
     
@@ -32,25 +42,32 @@ body{
     gap: 0px;
 
     height: 80vh;
+    width: 80%;
+
+    overflow: hidden;
+    background-color: transparent;
 }
 
-button{
+select:focus{
+    outline: none;
+}
+
+option{
     font-family: GNU Unifont;
     background-color: transparent;
     border: none;
 
-    color: white ;
+    color: var(--color_sec) ;
 
     font-size: 20px;
-    width: 100%;
+    width: calc(100% - 4px);
 
     text-align: start;
-
 }
 
-button:hover{
-    background-color: white;
-    color: black;
+option:hover, option:checked, option:focus, option:active{
+    background-color: var(--color_sec);
+    color: var(--color_prim);
 }
 
 footer{
